# spel-admin-authority

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/spel-admin-authority/: Cargo.toml
crates/spel-admin-authority/src/: config.rs  error.rs  key.rs  lib.rs  signer.rs  state.rs  validator.rs
docs/: rfp-traceability.md
samples/gated-config-program/: Cargo.toml
samples/gated-config-program/src/: lib.rs
samples/spel-gated-config-program/: Cargo.toml  README.md
scripts/: localnet-smoke.sh
